Stop tag names from wrapping funny at whitespace

--- a/app/assets/stylesheets/spotlight/typeahead.css
+++ b/app/assets/stylesheets/spotlight/typeahead.css
@@ -51,6 +51,12 @@
   }
 }
 
+.tt-dataset-tags {
+  p {
+    white-space: nowrap !important;
+  }
+}
+
 .autocomplete-item {
   display: flex;
 
